force-app/main/default/objects/ClarificationTopic__c/ClarificationTopic__c.object-meta.xml
<CustomObject>
    <label>Clarification Topic</label>
    <nameField>
        <label>Clarification Topic  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clarifications Topics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>