force-app/main/default/objects/ClarificationTopic__c/fields/NAM1__c.field-meta.xml
<CustomField>
    <fullName>NAM1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NAM</label>
    <referenceTo>NAM__c</referenceTo>
    <relationshipLabel>Clarifications Topics</relationshipLabel>
    <relationshipName>ClarificationsTopics</relationshipName>
    <type>Lookup</type>
</CustomField>