force-app/main/default/objects/ClarificationTopic__c/fields/NAM__c.field-meta.xml
<CustomField>
    <fullName>NAM__c</fullName>
    <formula>HYPERLINK(Clarification__r.NAM__c,Clarification__r.NAM__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NAM</label>
    <type>Text</type>
</CustomField>