force-app/main/default/objects/ClarificationTopic__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <formula>Text(Clarification__r.Partner__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner</label>
    <type>Text</type>
</CustomField>